Registration form and responsive layouts

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -83,14 +83,14 @@
                             </div>
 						</div><!-- /.row -->
 						<div class="row">
-							<div class="col-md-7 col-md-offset-1">
+							<div class="col-md-7 col-md-offset-1 col-sm-8">
 								<p>Регистрация закрывается 15 января, в 23:59 Kyiv Time Zone (+2 UTC)</p>
                                 <div class="timer">
                                     <p class="time"></p>
                                     <p class="timer-labels"><span>Дней</span><span>Часов</span><span>Минут</span><span>Секунд</span></p>
                                 </div>
                             </div>
-                            <div class="col-md-2 buy-button"><a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a></div>
+                            <div class="col-md-2 col-sm-4 buy-button"><a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a></div>
 						</div><!-- /.row -->
 					</div><!-- /.container -->
 				</section>
@@ -114,7 +114,7 @@
 									<li>Вы не знакомы или слабо знакомы с IT</li>
 								</ul>
 								<div class="button">
-									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 								<div class="form-description">
 									<p>Подойдет тем, кто до этого вообще не работал в IT, не имеет опыта в разработке, не знаком с отраслью, но хочет в нее попасть. Здесь самый большой объем и количество материала. По завершению Вы сможете руководить проектами лёгкой и средней сложности. 2.	Вам потребуется как минимум 2-3 года, чтобы набраться практического опыта для дальнейшего карьерного роста.</p>
@@ -131,7 +131,7 @@
 									<li>Вы не являетесь руководителем проектов или руководите менее года</li>
 								</ul>
 								<div class="button">
-									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 								<div class="form-description">
 									<p>Подойдет тем, кто знаком с разработкой в IT, но не является менеджером, либо только недавно им стал (до 1 года). Здесь средний объем и количество материала. По завершению, Вы сможете руководить проектами любой сложности, включая проекты Enterprise сектора. Здесь желательно закрепление практического опыта не менее 2 лет с последующей сертификацией в любом из подходящих Вам направлений: PMP, IMPA, Prince2 и т.п.</p>
@@ -148,7 +148,7 @@
 									<li>Желаете ускорить свой карьерный рост или повысить эффективность своих проектов или групп проектов</li>
 								</ul>
 								<div class="button">
-									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 								<div class="form-description">
 									<p>Идеально подходит тем, кто уже является руководителем проектов более года, но чья карьера по каким-то причинам остановилась, либо замедлилась. Вы уже должны быть (или считаете себя) довольно опытным руководителем в проектах разработки IT решений, и хотите расти дальше. Здесь также средний объем по количеству материала, в то же время — это самый сложный поток, т.к. глубина рассматриваемых тем наибольшая, также тут присутствуют темы и материалы, которых нет в первых двух уровнях программы. Закончив этот уровень,Вы сможете управлять группой проектов, руководить отделом или департаментом, а может быть и небольшой компанией.</p>
@@ -442,7 +442,7 @@
 					<div class="container">
                         <div class="row">
                             <div class="col-md-12">
-								<h2 id="buy">Начало программы, длительность и стоимость</h2>
+                                <h2 id="buy">Начало программы, длительность и стоимость</h2>
                             </div>
                         </div><!-- /.row -->
                         <div class="row study-forms study-prices">
@@ -457,7 +457,7 @@
                                     <li class="price"><span class="currency">$</span>1390</li>
 								</ul>
 								<div class="button">
-									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 							</div>
 							<div class="col-md-4 form senior">
@@ -471,7 +471,7 @@
                                     <li class="price"><span class="currency">$</span>1890</li>
 								</ul>
 								<div class="button">
-									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 							</div>
 							<div class="col-md-4 form expert">
@@ -485,7 +485,7 @@
                                     <li class="price"><span class="currency">$</span>1990</li>
 								</ul>
 								<div class="button">
-									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
 								</div>
 							</div>
 						</div><!-- /.row -->
@@ -520,18 +520,54 @@
                                 <p><strong>Записывайтесь в программу обучения!</strong></p>
                             </div>
                         </div><!-- /.row -->
+
+
+                        <div class="modal fade" id="registration" tabindex="-1" role="dialog" aria-labelledby="registrationLabel">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                        <h4 class="modal-title" id="registrationLabel">Зарегистрироваться</h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form action="">
+                                            <div class="form-group">
+                                                <input type="text" class="form-control" name="name" placeholder="Ваше имя *" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="email" class="form-control" name="email" placeholder="Ваш email *" required>
+                                            </div>
+                                            <p><a href="#policy"  data-toggle="modal" data-target="#policy">Политика конфиденциальности</a></p>
+                                            <button type="submit" class="btn btn-default">Записаться</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div><!-- /.modal -->
+
+
                         <div class="row">
-                            <div class="col-md-6 col-md-offset-3 bottom-timer">
+                            <div class="col-md-6 hidden-xs registration">
+                                <h4>Зарегистрироваться</h4>
+                                <form action="">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" name="name" placeholder="Ваше имя *" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" name="email" placeholder="Ваш email *" required>
+                                    </div>
+                                    <p><a href="#policy" data-toggle="modal" data-target="#policy">Политика конфиденциальности</a></p>
+                                    <button type="submit" class="btn btn-default">Записаться</button>
+                                </form>
+                            </div>
+                            <div class="col-md-6 bottom-timer">
                                 <h4>До закрытия регистрации осталось</h4>
                                 <div class="timer text-primary">
                                     <p class="time"></p>
                                     <p class="timer-labels"><span>Дней</span><span>Часов</span><span>Минут</span><span>Секунд</span></p>
                                 </div>
-								<div>
-									<a href="#buy" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
-								</div>
                             </div>
-                        </div>
+                        </div><!-- /.row -->
 					</div>
 				</section>
 
@@ -551,7 +587,6 @@
                             <div class="col-md-6 policy-link">
                                 <p><a href="#policy"  data-toggle="modal" data-target="#policy">Политика конфиденциальности</a></p>
                             </div>
-
 
                             <div class="modal fade" id="policy" tabindex="-1" role="dialog" aria-labelledby="policyLabel">
                                 <div class="modal-dialog" role="document">
