--- a/public_html/index.html
+++ b/public_html/index.html
@@ -52,7 +52,7 @@
 				<section class="about-container">
 					<div class="container">
 						<div class="row title">
-							<div class="col-md-5"><h1>Уникальная программа <q>Обучение проектному менеджменту в IT-разработке</q></h1></div>
+							<div class="col-md-5"><h1>Уникальная программа <q>Обучение проектному менеджменту <br>в IT-разработке</q></h1></div>
 							<div class="col-md-7">
                                 <div class="row">
                                     <div class="col-md-9 col-md-offset-3">
@@ -83,14 +83,14 @@
                             </div>
 						</div><!-- /.row -->
 						<div class="row">
-							<div class="col-md-7 col-md-offset-1 col-sm-8">
+                            <div class="col-sm-4 buy-button"><a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a></div>
+							<div class="col-md-offset-1 col-sm-7">
 								<p>Регистрация закрывается 15 января, в 23:59 Kyiv Time Zone (+2 UTC)</p>
                                 <div class="timer">
                                     <p class="time"></p>
                                     <p class="timer-labels"><span>Дней</span><span>Часов</span><span>Минут</span><span>Секунд</span></p>
                                 </div>
                             </div>
-                            <div class="col-md-2 col-sm-4 buy-button"><a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a></div>
 						</div><!-- /.row -->
 					</div><!-- /.container -->
 				</section>
@@ -326,7 +326,16 @@
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
-                            <div class="col-md-3"></div>
+                            <div class="col-md-3 images">
+                                <i class="icon"></i>
+                                <i class="icon"></i>
+                                <i class="icon"></i>
+                                <i class="icon"></i>
+                                <i class="icon"></i>
+                                <i class="icon"></i>
+                                <i class="icon"></i>
+                                <i class="icon"></i>
+                            </div>
                             <div class="col-md-9">
                                 <ul>
                                     <li>Все необходимые знания и навыки в области управления проектами в IT-разработке собраны в одной цельной программе</li>
@@ -355,9 +364,10 @@
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-xs-9">
                                 <p>Можно ли доверять качеству обучения? Обучение будет вести Алексей Егошин &mdash; сертифицированный тренер Luxoft Training Center по управлению проектами и soft skills с 5 летним стажем преподавания. Только за 2014-2015 года провел тренингов на 600+ часов. Сертифицированный PMP и MBA специалист. <a href="https://drive.google.com/folderview?id=0B0EfTeQW1vKKWmQ3RWpvZ3Z3WlU&usp=sharing">Обладатель множества сертификатов</a>, постоянно повышающий свой профессиональный уровень. 15 лет работы в IT-отрасли, из которых более 10 лет на руководящих позициях в ведущих ITи Telecom компаниях Украины (Квазар-Микро, MTC, Инфопульс и Luxoft). Огромный практический опыт работы в международных проектах, который продолжает постоянно пополняться благодаря работе в секторе разработки программного обеспечения. Активный участник и докладчик PM сообществ и тематических конференций по управлению проектами. <a href="http://consultpm.com/about/">Подробнее</a>.</p>
                             </div>
+                            <div class="col-xs-3 photo-coach"><img src="img/coach.jpg" alt="Coach" class="img-responsive" /></div>
                         </div><!-- /.row -->
 					</div>
 				</section>
@@ -430,7 +440,7 @@
                             </div>
                         </div><!-- /.row -->
                         <div class="row">
-                            <div class="col-md-3 img"></div>
+                            <div class="col-md-3"><img src="img/warranty.png" alt="Гарантия" class="img-responsive"></div>
                             <div class="col-md-9">
 								<p>Предоставляется гарантия возврата 100% внесенных денег. Если Вас по какой-либо причине не устроят занятия/материалы/упражнения – Вы получите все внесенные деньги назад. Этим правом можно будет воспользоваться только в течение первого занятия. В то же время, воспользовавшись им, Вы потеряете возможность участия в любых будущих программах, событиях, курсах и мероприятиях от consultpm.com</p>
 							</div>
@@ -530,12 +540,20 @@
                                         <h4 class="modal-title" id="registrationLabel">Зарегистрироваться</h4>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="">
+                                        <script type="text/javascript">var submitted=false;</script>
+                                        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='http://localhost:8383/pmschool/index.html';}"></iframe>
+                                        <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
                                             <div class="form-group">
-                                                <input type="text" class="form-control" name="name" placeholder="Ваше имя *" required>
+                                                <p>Какую программу обучения Вы оплачиваете? *</p>
+                                                <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamentals" required>Fundamentals</label></div>
+                                                <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required checked>Senior</label></div>
+                                                <div class="radio"><label><input type="radio" name="entry.134836639" value="Expert" required>Expert</label></div>
                                             </div>
                                             <div class="form-group">
-                                                <input type="email" class="form-control" name="email" placeholder="Ваш email *" required>
+                                                <input type="text" class="form-control" name="entry.1970786522" placeholder="Ваше имя *" required>
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="email" class="form-control" name="entry.442792320" placeholder="Ваш email *" required>
                                             </div>
                                             <p><a href="#policy"  data-toggle="modal" data-target="#policy">Политика конфиденциальности</a></p>
                                             <button type="submit" class="btn btn-default">Записаться</button>
@@ -549,12 +567,20 @@
                         <div class="row">
                             <div class="col-md-6 hidden-xs registration">
                                 <h4>Зарегистрироваться</h4>
-                                <form action="">
+                                <script type="text/javascript">var submitted=false;</script>
+                                <iframe name="hidden_iframe2" id="hidden_iframe2" style="display:none;" onload="if(submitted) {window.location='http://localhost:8383/pmschool/index.html';}"></iframe>
+                                <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe2" onsubmit="submitted=true;">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" name="name" placeholder="Ваше имя *" required>
+                                        <p>Какую программу обучения Вы оплачиваете? *</p>
+                                        <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamentals" required>Fundamentals</label></div>
+                                        <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required checked>Senior</label></div>
+                                        <div class="radio"><label><input type="radio" name="entry.134836639" value="Expert" required>Expert</label></div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="email" class="form-control" name="email" placeholder="Ваш email *" required>
+                                        <input type="text" class="form-control" name="entry.1970786522" placeholder="Ваше имя *" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" name="entry.442792320" placeholder="Ваш email *" required>
                                     </div>
                                     <p><a href="#policy" data-toggle="modal" data-target="#policy">Политика конфиденциальности</a></p>
                                     <button type="submit" class="btn btn-default">Записаться</button>
@@ -575,14 +601,14 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-4 col-md-offset-4 social">
-                                <a href="#"><i class="fontello">&#xe803;</i><span>Facebook</span></a>
-								<a href="#"><i class="fontello">&#xe800;</i><span>VK</span></a>
-								<a href="#"><i class="fontello">&#xe801;</i><span>Google+</span></a>
+                                <a href="https://ua.linkedin.com/in/oleksiyyegoshyn"><span class="fontello">&#xe800;</span><em>LinkedIn</em></a>
+								<a href="https://fb.com/consultpm"><span class="fontello">&#xe801;</span><em>Facebook</em></a>
+								<a href="http://www.slideshare.net/alexeyegoshin777"><span class="fontello">&#xe803;</span><em>Slideshare</em></a>
 							</div>
 						</div>
                         <div class="row">
                             <div class="col-md-6">
-                                &copy; 2016, ConsultPM
+                                &copy; 2016, <a href="http://consultpm.com/">ConsultPM</a>, +38-050-3250086
                             </div>
                             <div class="col-md-6 policy-link">
                                 <p><a href="#policy"  data-toggle="modal" data-target="#policy">Политика конфиденциальности</a></p>
