--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 		<title>PM School</title>
-        <link href='https://fonts.googleapis.com/css?family=Arimo&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Arimo:400,700&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
         <!-- Latest compiled and minified CSS -->
@@ -72,7 +72,7 @@
                                         <ul>
                                             <li>Полноценный курс менеджмента, около 200 часов, 13 модулей</li>
                                             <li>3 области знаний – Software Development Life Cycle, Management Hard Skills, Management Soft Skills</li>
-                                            <li>Только работающая теория, проверенная на практике в ведущих IT-компаниях Украины</li>
+                                            <li>Только работающая теория, проверенная на практике в ведущих международных IT-компаниях</li>
                                             <li>Обучение через практику с элементами MBA-подходов</li>
                                             <li>На рынке отсутствуют аналоги подобной программы</li>
                                             <li>Лучшим ученикам будут даны рекомендация в IT-компании на прохождение собеседования (есть договоренность с IT-компаниями)</li>
@@ -83,7 +83,7 @@
                             </div>
 						</div><!-- /.row -->
 						<div class="row">
-                            <div class="col-sm-4 buy-button"><a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a></div>
+                            <div class="col-sm-4 buy-button"><a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a></div>
 							<div class="col-md-offset-1 col-sm-7">
 								<p>Регистрация закрывается 15 января, в 23:59 Kyiv Time Zone (+2 UTC)</p>
                                 <div class="timer">
@@ -106,7 +106,7 @@
 							<div class="col-md-4 form fundamental">
 								<div class="topic">
 									<h3>Fundamentals</h3>
-									<div class="form-label">За 4 месяца</div>
+									<div class="form-label">Около 4 месяцев</div>
 								</div>
 
 								<ul>
@@ -114,16 +114,16 @@
 									<li>Вы не знакомы или слабо знакомы с IT</li>
 								</ul>
 								<div class="button">
-									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a>
 								</div>
 								<div class="form-description">
-									<p>Подойдет тем, кто до этого вообще не работал в IT, не имеет опыта в разработке, не знаком с отраслью, но хочет в нее попасть. Здесь самый большой объем и количество материала. По завершению Вы сможете руководить проектами лёгкой и средней сложности. 2.	Вам потребуется как минимум 2-3 года, чтобы набраться практического опыта для дальнейшего карьерного роста.</p>
+									<p>Подойдет тем, кто до этого вообще не работал в IT, не имеет опыта в разработке, не знаком с отраслью, но хочет в нее попасть. Здесь самый большой объем и количество материала. По завершению Вы сможете руководить проектами лёгкой и средней сложности. Вам потребуется как минимум 2-3 года, чтобы набраться практического опыта для дальнейшего карьерного роста.</p>
 								</div>
 							</div>
 							<div class="col-md-4 form senior">
 								<div class="topic">
 									<h3>Senior</h3>
-									<div class="form-label">За 3 месяца</div>
+									<div class="form-label">Около 3 месяцев</div>
 								</div>
 								<ul>
 									<li>1-3 года в отрасли</li>
@@ -131,16 +131,16 @@
 									<li>Вы не являетесь руководителем проектов или руководите менее года</li>
 								</ul>
 								<div class="button">
-									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a>
 								</div>
 								<div class="form-description">
-									<p>Подойдет тем, кто знаком с разработкой в IT, но не является менеджером, либо только недавно им стал (до 1 года). Здесь средний объем и количество материала. По завершению, Вы сможете руководить проектами любой сложности, включая проекты Enterprise сектора. Здесь желательно закрепление практического опыта не менее 2 лет с последующей сертификацией в любом из подходящих Вам направлений: PMP, IMPA, Prince2 и т.п.</p>
+									<p>Подойдет тем, кто знаком с разработкой в IT, но не является менеджером, либо только недавно им стал (до 1 года). Здесь средний объем и количество материала. По завершению, Вы сможете руководить проектами любой сложности, включая проекты Enterprise сектора. По завершению обучения желательно закрепить свои знания в течение не менее 2 лет с последующей сертификацией в любом из подходящих Вам направлений: PMP, IMPA, Prince2 и т.п.</p>
 								</div>
 							</div>
 							<div class="col-md-4 form expert">
 								<div class="topic">
 									<h3>Expert</h3>
-									<div class="form-label">За 2 месяца</div>
+									<div class="form-label">Около 3 месяцев</div>
 								</div>
 								<ul>
 									<li>Более 3 лет в отрасли</li>
@@ -148,16 +148,16 @@
 									<li>Желаете ускорить свой карьерный рост или повысить эффективность своих проектов или групп проектов</li>
 								</ul>
 								<div class="button">
-									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a>
 								</div>
 								<div class="form-description">
-									<p>Идеально подходит тем, кто уже является руководителем проектов более года, но чья карьера по каким-то причинам остановилась, либо замедлилась. Вы уже должны быть (или считаете себя) довольно опытным руководителем в проектах разработки IT решений, и хотите расти дальше. Здесь также средний объем по количеству материала, в то же время — это самый сложный поток, т.к. глубина рассматриваемых тем наибольшая, также тут присутствуют темы и материалы, которых нет в первых двух уровнях программы. Закончив этот уровень,Вы сможете управлять группой проектов, руководить отделом или департаментом, а может быть и небольшой компанией.</p>
+									<p>Идеально подходит тем, кто уже является руководителем проектов более года, но чья карьера по каким-то причинам остановилась, либо замедлилась. Вы уже должны быть (или считаете себя) довольно опытным руководителем в проектах разработки IT решений, и хотите расти дальше. Здесь также средний объем по количеству материала, в то же время — это самый сложный поток, т.к. глубина рассматриваемых тем наибольшая, также тут присутствуют темы и материалы, которых нет в первых двух уровнях программы. Закончив этот уровень, Вы сможете управлять группой проектов, руководить отделом или департаментом, а может быть и небольшой компанией.</p>
 								</div>
 							</div>
 						</div><!-- /.row -->
 						<div class="row">
                             <div class="col-md-12">
-                                <p>Внутри каждая программа программа разбита на три большие области знаний: Software Development Life Cycle, Management Hard Skills и Management Soft Skills</p>
+                                <p>Внутри каждая программа разбита на три большие области знаний: Software Development Life Cycle, Management Hard Skills и Management Soft Skills</p>
                             </div>
 						</div><!-- /.row -->
                         <div class="row">
@@ -365,7 +365,7 @@
                         </div><!-- /.row -->
                         <div class="row">
                             <div class="col-xs-9">
-                                <p>Можно ли доверять качеству обучения? Обучение будет вести Алексей Егошин &mdash; сертифицированный тренер Luxoft Training Center по управлению проектами и soft skills с 5 летним стажем преподавания. Только за 2014-2015 года провел тренингов на 600+ часов. Сертифицированный PMP и MBA специалист. <a href="https://drive.google.com/folderview?id=0B0EfTeQW1vKKWmQ3RWpvZ3Z3WlU&usp=sharing">Обладатель множества сертификатов</a>, постоянно повышающий свой профессиональный уровень. 15 лет работы в IT-отрасли, из которых более 10 лет на руководящих позициях в ведущих ITи Telecom компаниях Украины (Квазар-Микро, MTC, Инфопульс и Luxoft). Огромный практический опыт работы в международных проектах, который продолжает постоянно пополняться благодаря работе в секторе разработки программного обеспечения. Активный участник и докладчик PM сообществ и тематических конференций по управлению проектами. <a href="http://consultpm.com/about/">Подробнее</a>.</p>
+                                <p>Можно ли доверять качеству обучения? Обучение будет вести Алексей Егошин &mdash; сертифицированный тренер Luxoft Training Center по управлению проектами и soft skills с 5 летним стажем преподавания. Только за 2014-2015 года провел тренингов на 600+ часов. Сертифицированный PMP и MBA специалист. <a href="https://drive.google.com/folderview?id=0B0EfTeQW1vKKWmQ3RWpvZ3Z3WlU&usp=sharing">Обладатель множества сертификатов</a>, постоянно повышающий свой профессиональный уровень. 15 лет работы в IT-отрасли, из которых более 10 лет на руководящих позициях в ведущих IT и Telecom компаниях Украины (Квазар-Микро, MTC, Инфопульс и Luxoft). Огромный практический опыт работы в международных проектах, который продолжает постоянно пополняться благодаря работе в секторе разработки программного обеспечения. Активный участник и докладчик PM сообществ и тематических конференций по управлению проектами. <a href="http://consultpm.com/about/">Подробнее</a>.</p>
                             </div>
                             <div class="col-xs-3 photo-coach"><img src="img/coach.jpg" alt="Coach" class="img-responsive" /></div>
                         </div><!-- /.row -->
@@ -459,7 +459,7 @@
 							<div class="col-md-4 form fundamental">
 								<div class="topic">
 									<h3>Fundamentals</h3>
-									<div class="form-label">За 4 месяца</div>
+									<div class="form-label">Около 4 месяцев</div>
 								</div>
 								<ul>
 									<li>208 часов</li>
@@ -467,13 +467,13 @@
                                     <li class="price"><span class="currency">$</span>1390</li>
 								</ul>
 								<div class="button">
-									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a>
 								</div>
 							</div>
 							<div class="col-md-4 form senior">
 								<div class="topic">
 									<h3>Senior</h3>
-									<div class="form-label">За 3 месяца</div>
+									<div class="form-label">Около 3 месяцев</div>
 								</div>
 								<ul>
 									<li>168 часов</li>
@@ -481,13 +481,13 @@
                                     <li class="price"><span class="currency">$</span>1890</li>
 								</ul>
 								<div class="button">
-									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a>
 								</div>
 							</div>
 							<div class="col-md-4 form expert">
 								<div class="topic">
 									<h3>Expert</h3>
-									<div class="form-label">За 2 месяца</div>
+									<div class="form-label">Около 2 месяцев</div>
 								</div>
 								<ul>
 									<li>96 часов</li>
@@ -495,7 +495,7 @@
                                     <li class="price"><span class="currency">$</span>1990</li>
 								</ul>
 								<div class="button">
-									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Купить</a>
+									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a>
 								</div>
 							</div>
 						</div><!-- /.row -->
@@ -527,7 +527,7 @@
                                     <li>Вы хотите <del>по-взрослому</del> управлять своей жизнью и развиваться,</li>
                                     <li>Вы готовы ради всего этого прикладывать усилия</li>
                                 </ul>
-                                <p><strong>Записывайтесь в программу обучения!</strong></p>
+                                <p style="text-align: center;"><strong>Записывайтесь в программу обучения!</strong></p>
                             </div>
                         </div><!-- /.row -->
 
@@ -537,7 +537,7 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                        <h4 class="modal-title" id="registrationLabel">Зарегистрироваться</h4>
+                                        <h4 class="modal-title" id="registrationLabel">Записаться</h4>
                                     </div>
                                     <div class="modal-body">
                                         <script type="text/javascript">var submitted=false;</script>
@@ -546,11 +546,11 @@
                                             <div class="form-group">
                                                 <p>Какую программу обучения Вы оплачиваете? *</p>
                                                 <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamentals" required>Fundamentals</label></div>
-                                                <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required checked>Senior</label></div>
+                                                <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required>Senior</label></div>
                                                 <div class="radio"><label><input type="radio" name="entry.134836639" value="Expert" required>Expert</label></div>
                                             </div>
                                             <div class="form-group">
-                                                <input type="text" class="form-control" name="entry.1970786522" placeholder="Ваше имя *" required>
+                                                <input type="text" class="form-control" name="entry.1970786522" placeholder="Ваша Фамилия и Имя *" required>
                                             </div>
                                             <div class="form-group">
                                                 <input type="email" class="form-control" name="entry.442792320" placeholder="Ваш email *" required>
@@ -566,18 +566,18 @@
 
                         <div class="row">
                             <div class="col-md-6 hidden-xs registration">
-                                <h4>Зарегистрироваться</h4>
+                                <h4>Записаться</h4>
                                 <script type="text/javascript">var submitted=false;</script>
                                 <iframe name="hidden_iframe2" id="hidden_iframe2" style="display:none;" onload="if(submitted) {window.location='http://localhost:8383/pmschool/index.html';}"></iframe>
                                 <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe2" onsubmit="submitted=true;">
                                     <div class="form-group">
                                         <p>Какую программу обучения Вы оплачиваете? *</p>
                                         <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamentals" required>Fundamentals</label></div>
-                                        <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required checked>Senior</label></div>
+                                        <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required>Senior</label></div>
                                         <div class="radio"><label><input type="radio" name="entry.134836639" value="Expert" required>Expert</label></div>
                                     </div>
                                     <div class="form-group">
-                                        <input type="text" class="form-control" name="entry.1970786522" placeholder="Ваше имя *" required>
+                                        <input type="text" class="form-control" name="entry.1970786522" placeholder="Ваша Фамилия и Имя *" required>
                                     </div>
                                     <div class="form-group">
                                         <input type="email" class="form-control" name="entry.442792320" placeholder="Ваш email *" required>
