--- a/public_html/index.html
+++ b/public_html/index.html
@@ -72,10 +72,10 @@
                                         <ul>
                                             <li>Полноценный курс менеджмента, около 200 часов, 13 модулей</li>
                                             <li>3 области знаний – Software Development Life Cycle, Management Hard Skills, Management Soft Skills</li>
-                                            <li>Только работающая теория, проверенная на практике в ведущих международных IT-компаниях</li>
+                                            <li>Только работающие практики, прошедшие проверку в ведущих международных IT-компаниях</li>
                                             <li>Обучение через практику с элементами MBA-подходов</li>
                                             <li>На рынке отсутствуют аналоги подобной программы</li>
-                                            <li>Лучшим ученикам будут даны рекомендация в IT-компании на прохождение собеседования (есть договоренность с IT-компаниями)</li>
+                                            <li>Лучшим ученикам будут даны рекомендации в IT-компании на прохождение собеседования (есть договоренность с IT-компаниями)</li>
                                         </ul>
                                         <p>Закончив обучение, Вы сможете управлять проектами в IT-разработке.</p>
                                     </div>
@@ -134,7 +134,7 @@
 									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a>
 								</div>
 								<div class="form-description">
-									<p>Подойдет тем, кто знаком с разработкой в IT, но не является менеджером, либо только недавно им стал (до 1 года). Здесь средний объем и количество материала. По завершению, Вы сможете руководить проектами любой сложности, включая проекты Enterprise сектора. По завершению обучения желательно закрепить свои знания в течение не менее 2 лет с последующей сертификацией в любом из подходящих Вам направлений: PMP, IMPA, Prince2 и т.п.</p>
+									<p>Подойдет тем, кто знаком с разработкой в IT, но не является менеджером, либо только недавно им стал (до 1 года). Здесь средний объем и количество материала. По завершению, Вы сможете руководить проектами любой сложности, включая проекты Enterprise сектора. По завершению обучения желательно закрепить свои знания в течение не менее 2 лет с последующей сертификацией в любом из подходящих Вам направлений: PMP, IPMA, Prince2 и т.п.</p>
 								</div>
 							</div>
 							<div class="col-md-4 form expert">
@@ -145,7 +145,7 @@
 								<ul>
 									<li>Более 3 лет в отрасли</li>
 									<li>Вы руководите проектами год и более</li>
-									<li>Желаете ускорить свой карьерный рост или повысить эффективность своих проектов или групп проектов</li>
+									<li>Желаете ускорить свой карьерный рост или повысить эффективность своих проектов, портфелей или групп проектов</li>
 								</ul>
 								<div class="button">
 									<a href="#registration" data-toggle="modal" data-target="#registration" class="btn btn-lg btn-info"><i class="glyphicon glyphicon-shopping-cart"></i> Записаться</a>
@@ -190,16 +190,16 @@
                                             <div class="modal-body">
                                                 <p>Какие навыки Вы сможете добавить в свое резюме по окончанию обучения в программе</p>
                                                 <h5>Программа «Fundamentals» и «Senior»</h5>
-                                                <p>Одинаковые названия тем в программе «Fundamentals» и «Expert», но очень разная глубина проработки материала для слушателей.</p>
-                                                <p>В программе «Fundamentals» – много времени запланировано на разбор сути понятий, объяснение концепций и взаимосвязей, чтобы у слушателей возникло необходимое понимание и навыки, закрепляемые в дальнейшем на практике.</p>
-                                                <p>В программу «Senior» входят те же темы, что и в программу «Fundamentals», однако глубина разбора информации значительно больше, больше практики и меньше теории для объяснения понятий. Теории значительно меньше – предполагается, что слушатели уже большинство вещей знают, понимают и имеют соответствующий опыт.</p>
+                                                <p>Общие названия тем в программе «Fundamentals» и «Expert», но очень разная глубина проработки материала для слушателей.</p>
+                                                <p>В программе «Fundamentals» – много времени запланировано на разбор сути понятий, объяснение концепций и взаимосвязей, чтобы у слушателей сформировалось понимание и навыки, закрепляемые в дальнейшем на практике.</p>
+                                                <p>В программе «Senior» расширяются темы программы «Fundamentals». Глубина разбора информации значительно больше, больше практики. Меньше теории и объяснения понятий - предполагается, что слушатели уже знают и понимают большинство вещей, имеют соответствующий опытВ программе «Senior» расширяются темы программы «Fundamentals». Глубина разбора информации значительно больше, больше практики. Меньше теории и объяснения понятий - предполагается, что слушатели уже знают и понимают большинство вещей, имеют соответствующий опыт.</p>
                                                 <h6>SDLC:</h6>
                                                 <ul>
                                                     <li>Цикл Деминга, цикл Колба</li>
                                                     <li>Этапы и фазы разработки</li>
                                                     <li>Environments: DEV, QA, SIT, UAT, PROD</li>
                                                     <li>Зависимости и переходы между этапами разработки</li>
-                                                    <li>Redline, Deadline, Release, Production</li>
+                                                    <li>Redline, Deadline, Baseline, Release, Production</li>
                                                     <li>Release Management Process</li>
                                                     <li>Высокоуровневые шаги при разработке релиза</li>
                                                     <li>Коммуникации: «Правила игры» и обработка исключительных ситуаций</li>
@@ -250,7 +250,7 @@
                                                     <li>Тайм-менеджмент</li>
                                                     <li>Самоконтроль</li>
                                                     <li>Работа в потоке</li>
-                                                    <li>Мотивация и демотивация</li>
+                                                    <li>Мотивация, демотивация и профвыгорание (burnout)</li>
                                                     <li>Умение выступать, проведение презентаций, elevator speech</li>
                                                     <li>Типология личности, DISC</li>
                                                     <li>Метапрограммы</li>
@@ -344,10 +344,9 @@
                                     <li>Уникальность материалов, кейсов и практических примеров</li>
                                     <li>Обучающие симуляционные игры, базирующиеся на реальных событиях</li>
                                     <li>Множество тестов на определения своего стиля управления и рекомендации по оптимальному использованию этого стиля</li>
-                                    <li>Приглашенные спикеры — Guest Stars — на корневые темы программы для представления темы слушателям</li>
-                                    <li>Возможность познакомиться с ведущими специалистами — Guest Stars</li>
-                                    <li>Обязательная проверка домашних заданий</li>
-                                    <li>Последовательность тем организованна таким образом, что обучение происходит от простого к сложному, затрагивая все три сектора знаний одновременно (SDLC, Hard Skills и Soft Skills)</li>
+                                    <li>Приглашенные спикеры — Guest Stars — на ключевые темы программы для представления темы слушателям</li>
+                                    <li>Обязательный разбор домашних заданий</li>
+                                    <li>Последовательность тем организована таким образом, что обучение происходит от простого к сложному, затрагивая все три сектора знаний одновременно (SDLC, Hard Skills и Soft Skills)</li>
                                     <li>Регулярная персональная обратная связь от преподавателя</li>
                                     <li>Лучшим ученикам будут даны рекомендации в IT-компании на прохождение собеседования (есть договоренность с IT-компаниями)</li>
                                 </ul>
@@ -365,7 +364,7 @@
                         </div><!-- /.row -->
                         <div class="row">
                             <div class="col-xs-9">
-                                <p>Можно ли доверять качеству обучения? Обучение будет вести Алексей Егошин &mdash; сертифицированный тренер Luxoft Training Center по управлению проектами и soft skills с 5 летним стажем преподавания. Только за 2014-2015 года провел тренингов на 600+ часов. Сертифицированный PMP и MBA специалист. <a href="https://drive.google.com/folderview?id=0B0EfTeQW1vKKWmQ3RWpvZ3Z3WlU&usp=sharing">Обладатель множества сертификатов</a>, постоянно повышающий свой профессиональный уровень. 15 лет работы в IT-отрасли, из которых более 10 лет на руководящих позициях в ведущих IT и Telecom компаниях Украины (Квазар-Микро, MTC, Инфопульс и Luxoft). Огромный практический опыт работы в международных проектах, который продолжает постоянно пополняться благодаря работе в секторе разработки программного обеспечения. Активный участник и докладчик PM сообществ и тематических конференций по управлению проектами. <a href="http://consultpm.com/about/">Подробнее</a>.</p>
+                                <p>Можно ли доверять качеству обучения? Обучение будет вести Алексей Егошин &mdash; сертифицированный тренер Luxoft Training Center по управлению проектами и soft skills с 5 летним стажем преподавания. Только за 2014-2015 года ровел более 600 часов тренингов. Сертифицированный PMP и MBA специалист. <a href="https://drive.google.com/folderview?id=0B0EfTeQW1vKKWmQ3RWpvZ3Z3WlU&usp=sharing">Обладатель множества сертификатов</a>, постоянно повышающий свой профессиональный уровень. 15 лет работы в IT-отрасли, из которых более 10 лет на руководящих позициях в ведущих IT и Telecom компаниях Украины (Квазар-Микро, MTC, Инфопульс и Luxoft). Огромный практический опыт в международных проектах, который продолжает постоянно пополняться благодаря работе в секторе разработки программного обеспечения. Активный участник и докладчик PM сообществ и тематических конференций по управлению проектами. <a href="http://consultpm.com/about/">Подробнее</a>.</p>
                             </div>
                             <div class="col-xs-3 photo-coach"><img src="img/coach.jpg" alt="Coach" class="img-responsive" /></div>
                         </div><!-- /.row -->
@@ -410,12 +409,13 @@
                         </div><!-- /.row -->
                         <div class="row">
                             <div class="col-md-6">
-                                <p>Обучение будет проходить очно в MBA стиле:</p>
+                                <p>Обучение будет проходить очно в MBA-стиле:</p>
 								<ul>
                                     <li>выдается материал на самостоятельное изучение перед занятием</li>
                                     <li>изученный материал обсуждается в группе</li>
                                     <li>на занятии материал закрепляется практикой и упражнениями</li>
                                     <li>выдается домашнее задание на дальнейшее закрепление материала</li>
+                                    <li>результат домашнего задания разбирается на следующем занятии</li>
                                 </ul>
                             </div>
                             <div class="col-md-6">
@@ -541,10 +541,10 @@
                                     </div>
                                     <div class="modal-body">
                                         <script type="text/javascript">var submitted=false;</script>
-                                        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='http://localhost:8383/pmschool/index.html';}"></iframe>
+                                        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='http://consultpm.com/pm-edu-2016/';}"></iframe>
                                         <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
                                             <div class="form-group">
-                                                <p>Какую программу обучения Вы оплачиваете? *</p>
+                                                <p>Какую программу обучения Вы выбираете? *</p>
                                                 <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamentals" required>Fundamentals</label></div>
                                                 <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required>Senior</label></div>
                                                 <div class="radio"><label><input type="radio" name="entry.134836639" value="Expert" required>Expert</label></div>
@@ -568,10 +568,10 @@
                             <div class="col-md-6 hidden-xs registration">
                                 <h4>Записаться</h4>
                                 <script type="text/javascript">var submitted=false;</script>
-                                <iframe name="hidden_iframe2" id="hidden_iframe2" style="display:none;" onload="if(submitted) {window.location='http://localhost:8383/pmschool/index.html';}"></iframe>
+                                <iframe name="hidden_iframe2" id="hidden_iframe2" style="display:none;" onload="if(submitted) {window.location='http://consultpm.com/pm-edu-2016/';}"></iframe>
                                 <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe2" onsubmit="submitted=true;">
                                     <div class="form-group">
-                                        <p>Какую программу обучения Вы оплачиваете? *</p>
+                                        <p>Какую программу обучения Вы выбираете? *</p>
                                         <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamentals" required>Fundamentals</label></div>
                                         <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required>Senior</label></div>
                                         <div class="radio"><label><input type="radio" name="entry.134836639" value="Expert" required>Expert</label></div>
@@ -601,8 +601,8 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-4 col-md-offset-4 social">
-                                <a href="https://ua.linkedin.com/in/oleksiyyegoshyn"><span class="fontello">&#xe800;</span><em>LinkedIn</em></a>
 								<a href="https://fb.com/consultpm"><span class="fontello">&#xe801;</span><em>Facebook</em></a>
+                                <a href="https://ua.linkedin.com/in/oleksiyyegoshyn"><span class="fontello">&#xe800;</span><em>LinkedIn</em></a>
 								<a href="http://www.slideshare.net/alexeyegoshin777"><span class="fontello">&#xe803;</span><em>Slideshare</em></a>
 							</div>
 						</div>
