--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-		<title>PM School</title>
+		<title>PM EDU 2016</title>
         <link href='https://fonts.googleapis.com/css?family=Arimo:400,700&subset=latin,cyrillic-ext,cyrillic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
@@ -192,7 +192,7 @@
                                                 <h5>Программа «Fundamentals» и «Senior»</h5>
                                                 <p>Общие названия тем в программе «Fundamentals» и «Expert», но очень разная глубина проработки материала для слушателей.</p>
                                                 <p>В программе «Fundamentals» – много времени запланировано на разбор сути понятий, объяснение концепций и взаимосвязей, чтобы у слушателей сформировалось понимание и навыки, закрепляемые в дальнейшем на практике.</p>
-                                                <p>В программе «Senior» расширяются темы программы «Fundamentals». Глубина разбора информации значительно больше, больше практики. Меньше теории и объяснения понятий - предполагается, что слушатели уже знают и понимают большинство вещей, имеют соответствующий опытВ программе «Senior» расширяются темы программы «Fundamentals». Глубина разбора информации значительно больше, больше практики. Меньше теории и объяснения понятий - предполагается, что слушатели уже знают и понимают большинство вещей, имеют соответствующий опыт.</p>
+                                                <p>В программе «Senior» расширяются темы программы «Fundamentals». Глубина разбора информации значительно больше, больше практики. Меньше теории и объяснения понятий - предполагается, что слушатели уже знают и понимают большинство вещей, имеют соответствующий опыт.</p>
                                                 <h6>SDLC:</h6>
                                                 <ul>
                                                     <li>Цикл Деминга, цикл Колба</li>
@@ -542,10 +542,10 @@
                                     <div class="modal-body">
                                         <script type="text/javascript">var submitted=false;</script>
                                         <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='http://consultpm.com/pm-edu-2016/';}"></iframe>
-                                        <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
+                                        <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;" class="reg-form">
                                             <div class="form-group">
                                                 <p>Какую программу обучения Вы выбираете? *</p>
-                                                <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamentals" required>Fundamentals</label></div>
+                                                <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamental" required>Fundamentals</label></div>
                                                 <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required>Senior</label></div>
                                                 <div class="radio"><label><input type="radio" name="entry.134836639" value="Expert" required>Expert</label></div>
                                             </div>
@@ -569,10 +569,10 @@
                                 <h4>Записаться</h4>
                                 <script type="text/javascript">var submitted=false;</script>
                                 <iframe name="hidden_iframe2" id="hidden_iframe2" style="display:none;" onload="if(submitted) {window.location='http://consultpm.com/pm-edu-2016/';}"></iframe>
-                                <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe2" onsubmit="submitted=true;">
+                                <form action="https://docs.google.com/forms/d/1lBZnFWBMQSJCMZlx8y6TyPIdC0F6PXB8tbc-U1rdu68/formResponse" method="post" target="hidden_iframe2" onsubmit="submitted=true;" class="reg-form">
                                     <div class="form-group">
                                         <p>Какую программу обучения Вы выбираете? *</p>
-                                        <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamentals" required>Fundamentals</label></div>
+                                        <div class="radio"><label><input type="radio" name="entry.134836639" value="Fundamental" required>Fundamentals</label></div>
                                         <div class="radio"><label><input type="radio" name="entry.134836639" value="Senior" required>Senior</label></div>
                                         <div class="radio"><label><input type="radio" name="entry.134836639" value="Expert" required>Expert</label></div>
                                     </div>
